--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'roboto', sans-serif;
-    background-color:black;
+    background-color:aliceblue ;
     color:black;
     margin:0;
     padding: 20px;
